--- a/_talks/05-25-cssc.md
+++ b/_talks/05-25-cssc.md
@@ -1,7 +1,7 @@
 ---
 title: "Crowds, Chaos, and Commutes: Making Inference on the Spatiotemporal Impact of Special Events on Travel Times"
 collection: talks
-type: "contributed_talk"
+type: "Contributed Talk"
 permalink: /talks/05-25-cssc.md
 venue: "Canadian Statistics Student Conference (CSSC) 2025"
 date: 2025-05-24
