--- a/_talks/05-25-ssc.md
+++ b/_talks/05-25-ssc.md
@@ -2,7 +2,7 @@
 title: "Comparing Exact and Approximate Inference for Spatial Autocorrelation Tests: A Power Analysis"
 collection: talks
 type: "Contributed Talk"
-permalink: /talks/05-25-cssc.md
+permalink: talks/05-25-cssc.md
 venue: "SSC Annual Meeting 2025"
 date: 2025-05-26
 location: "Saskatoon, Canada"
