--- a/_talks/07-25-siam.md
+++ b/_talks/07-25-siam.md
@@ -2,7 +2,7 @@
 title: "Endemicity and Eradication of Diseases in the Presence of Vaccination and Reinfection in a SEIRV Model"
 collection: talks
 type: "Contributed Talk"
-permalink: /talks/07-25-siam.md
+permalink: talks/07-25-siam.md
 venue: "The Third Joint SIAM/CAIMS Annual Meetings (AN25)"
 date: 2025-07-29
 location: "Montreal, Canada"
